--- a/ansible/roles/operator-pipeline/templates/openshift/tasks/preflight.yml
+++ b/ansible/roles/operator-pipeline/templates/openshift/tasks/preflight.yml
@@ -7,7 +7,7 @@ spec:
   params:
     - name: pipeline_image
     - name: base_image
-      default: quay.io/redhat-isv/preflight-test@sha256:c4e1ddd0cef6a510f24e6ff2e5de43a8b9beba611454c8276df0056f7cc974ea
+      default: quay.io/opdev/preflight:ppc64le
       description: Preflight image used
     - name: package_name
       description: Package name for the Operator under test
